<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/exo_controller"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.StepActivity">

    <LinearLayout
        android:id="@+id/player_layout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/step_thumbnail"
            android:visibility="gone"
            android:contentDescription="@string/app_recipe_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryText"
            app:controller_layout_id="@layout/exo_player_control_view"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/step_utilities"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin_relative">

        <TextView
            android:id="@+id/step_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/activity_text_subheader"
            android:layout_margin="@dimen/activity_margin_component"
            tools:text="Description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/previous_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_sibling"
                android:tag="@string/app_step_previous"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="@dimen/activity_margin_relative"
                    android:contentDescription="Left arrow"
                    android:src="@drawable/ic_back_arrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_relative"
                    android:text="Previous step"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin_sibling"
                android:tag="@string/app_step_next"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_margin_relative"
                    android:text="Next step"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_margin="@dimen/activity_margin_relative"
                    android:contentDescription="Right arrow"
                    android:rotation="180"
                    android:src="@drawable/ic_back_arrow"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>